--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,11 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3"
+        "php": ">=5.3.3",
+        "hampel/json": "dev-master"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "dev-master"
     },
     "autoload": {
         "psr-0": {
@@ -24,6 +28,6 @@
     },
     "minimum-stability": "dev",
     "config": {
-        "bin-dir": "dev"
+        "bin-dir": "bin"
     }
 }
