--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,28 +1,30 @@
-filter:
-    paths:
-        - src/*
-    excluded_paths:
-        - bin/*
-        - vendor/*
+before_commands:
+    - "composer install --no-dev --prefer-source"
 tools:
     php_code_coverage:
-        test_command: bin/phpunit
+        enabled: true
+    php_cpd:
+        enabled: true
+        excluded_dirs:
+            - bin
+            - vendor
+    php_loc:
+        enabled: true
+        excluded_dirs:
+            - bin
+            - vendor
+    php_mess_detector:
+        enabled: false
+        filter:
+            paths:
+                - 'src/*'
+    php_analyzer:
+        enabled: true
+        filter:
+            paths:
+                - 'src/*'
+    sensiolabs_security_checker: true
 #     php_code_sniffer:
 #         enabled: true
-#         command: bin/phpcs
 #         config:
 #             standard: Sutra
-#     php_cpd:
-#         enabled: true
-#     php_loc:
-#         enabled: true
-#         excluded_dirs:
-#             - bin
-#             - classes
-#             - vendor
-#     php_mess_detector:
-#         enabled: true
-#     php_analyzer:
-#         enabled: true
-before_commands:
-    - "composer install --prefer-source"
