Enable external code coverage

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -24,6 +24,7 @@ tools:
     php_analyzer:
         enabled: true
     sensiolabs_security_checker: true
+    external_code_coverage: true
 #     php_code_sniffer:
 #         enabled: true
 #         config:
