--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "hampel/json": "dev-master"
+        "hampel/json": "1.0.2"
     },
     "require-dev": {
         "phpunit/phpunit": "dev-master"
